ROO-93: Need to fix alignment issues in JSP forms
fixing alignment issues in show.jsp

--- a/addon-web-mvc-jsp/src/main/resources/org/springframework/roo/addon/mvc/jsp/styles/roo.css
+++ b/addon-web-mvc-jsp/src/main/resources/org/springframework/roo/addon/mvc/jsp/styles/roo.css
@@ -40,6 +40,11 @@ div {
 	text-align: left;
 }
 
+div .box {
+	display:block;
+	margin-left:105px;
+}
+
 /* header and footer elements */
 
 #wrap {
